--- a/content/_index.html
+++ b/content/_index.html
@@ -2,4 +2,24 @@
 title: Home
 ---
 
-<h1>Garrett S</h1>
+<div class="module intro">
+
+  <div class="intro__container">
+
+    <img class="intro__image" src="./images/garrett-siegel.jpg" alt="Garrett Siegel">
+    <p class="intro__overline">
+      Hi there! I'm
+    </p>
+    <h1 class="intro__name">Garrett Siegel</h1>
+    <p class="intro__desc">I'm a creative front-end developer and graphic designer</p>
+    <button class="intro__button">
+      <svg fill="#000000" width="40px" height="40px" viewBox="0 0 24 24" id="down-circle" data-name="Flat Line" xmlns="http://www.w3.org/2000/svg" class="icon flat-line">
+        <circle id="down-circle1" cx="12" cy="12" r="9" style="stroke-width: 2;"></circle>
+        <polyline id="down-polyline" points="9 11 12 14 15 11" style="fill: none; stroke-linecap: round; stroke-linejoin: round; stroke-width: 2;"></polyline>
+        <circle id="down-circle2" data-name="primary" cx="12" cy="12" r="9" style="fill: none; stroke-linecap: round; stroke-linejoin: round; stroke-width: 2;"></circle>
+      </svg>
+    </button>
+
+  </div>
+  
+</div>
