--- a/content/about.html
+++ b/content/about.html
@@ -3,5 +3,5 @@ title: About
 hide_footer: true
 ---
 
-<h2>About me</h2>
+<h2>About Me</h2>
 <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Labore, repellat fuga reprehenderit commodi minus totam quae voluptas, ab vero eveniet enim, aliquam facilis sint aliquid magnam mollitia. Pariatur dignissimos repudiandae quasi odit? Asperiores molestias inventore beatae! Fugit deserunt, accusantium atque ex ipsum laborum tenetur aperiam, impedit quia commodi molestiae. Explicabo, animi amet tenetur veritatis in quis voluptatum quaerat dolore vel?</p>
