Content creation, edits

--- a/content/_index.html
+++ b/content/_index.html
@@ -148,28 +148,28 @@ title: Home
 </div>
 
 <div class="module current">
-  <h2 class="current__title">Recent Projects</h2>
+  <h2 class="current__title">Recent Work:<br>Creative Front End Development</h2>
 
   <div class="current__container">
     <div class="current__image-outer">
       <img class="current__image" src="../images/design-systems.jpg" alt="">
     </div>
 
-    <h3 class="current__subhead">Design Systems and Atomic Design Theory</h3>
-    <p class="current__desc">In my recent projects, I have been at the forefront of implementing the latest techniques in Atomic Design theory to create fully-customized web design systems. Using cutting-edge CSS and CSS preprocessors, I have built scalable and modular systems that allow for efficient development and easy maintenance. My expertise in this area has resulted in beautifully designed websites that provide a seamless user experience. You can see the final project <span class="link"><a href="https://andscape.com/features/nfl-coach-comparisons-in-rooney-rule-era/" target="_blank">HERE</a></span>.</p>
+    <h3 class="current__subhead">Design Systems:<br>Embracing Atomic Design Theory for Customized Web Solutions</h3>
+    <p class="current__desc">In recent projects, I've been implementing the latest Atomic Design theory techniques to create fully-customized web design systems. Utilizing cutting-edge CSS and CSS preprocessors, I've built scalable and modular systems that allow for efficient development and easy maintenance. My expertise in this area has led to beautifully designed websites that deliver seamless user experiences. To explore this design system project further, please <span class="link"><a href="https://andscape.com/features/nfl-coach-comparisons-in-rooney-rule-era/" target="_blank">click here</a></span>.</p>
   </div>
 
   <div class="current__container">
-    <img class="current__image" src="../images/gsap.jpg" alt="">
+    <img class="current__image" src="../images/mccluskey.jpg" alt="">
 
-    <h3 class="current__subhead">GSAP and ScrollTrigger</h3>
-    <p class="current__desc">Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis eum perspiciatis reprehenderit quo nobis inventore, cum, ex mollitia, dicta voluptas nemo! Illum odit voluptatibus porro dolorum earum ducimus repellat eveniet, quibusdam culpa error! Dolor perferendis rem cum similique! Saepe natus laboriosam eveniet esse dicta architecto id ex veritatis doloremque dignissimos.</p>
+    <h3 class="current__subhead">Innovative Dynamic Web Page Design with GSAP and ScrollTrigger Integration</h3>
+    <p class="current__desc">I recently completed an innovative dynamic web page design project that showcases my expertise in creating engaging and interactive user experiences. Working closely with the ESPN Visual Storytelling design team, I took their vision and transformed it into a responsive and visually appealing editorial piece using the powerful GSAP animation library and ScrollTrigger plugin. Collaborating with my development team, I created a custom experience that incorporates custom video and audio players, as well as carousel elements, ensuring a smooth and captivating user experience across various devices and platforms. This project demonstrates my proficiency in front-end development and my ability to leverage advanced animation techniques to bring design visions to life. To explore this dynamic web page design further, please <span class="link"><a href="https://www.espn.com/espn/feature/story?id=34212123&_slug_=investigative-mccluskey" target="_blank">click here</a></span>.</p>
   </div>
 
   <div class="current__container">
     <img class="current__image" src="../images/data-viz.jpg" alt="">
-    <h3 class="current__subhead">Data Visualization</h3>
-    <p class="current__desc">I have experience in using both static and dynamic data to manipulate DOM events and enabling real-time updates of information on the web. In a recent project, I contributed to seamlessly update website content as it changed in real-time, creating a more engaging user experience. You can see an example <span class="link"><a href="https://preview.espn.com/espn/feature/story?id=35297537&_slug_=nfl-win-probability" target="_blank">HERE</a></span>.</p>
+    <h3 class="current__subhead">Data Visualization:<br>Dynamic and Real-Time Web Experiences</h3>
+    <p class="current__desc">I excel at utilizing both static and dynamic data to manipulate DOM events and enable real-time updates on the web. In a recent project, I effectively implemented seamless content updates as data changed in real time, creating a more engaging and interactive user experience. To explore this data visualization project further, please <span class="link"><a href="https://www.espn.com/espn/feature/story/_/id/35297537/nfl-playoff-picture-live-updated-chances-clinch-projected-bracket-scenarios-win-probabilities-interesting-races-watch" target="_blank">click here</a></span>.</p>
   </div>
 
   
