Added content, footer work

--- a/content/graphic-motion-design.html
+++ b/content/graphic-motion-design.html
@@ -2,7 +2,17 @@
 title: graphic-motion-design
 hide_footer: false
 ---
-<div class="graphic-design">
-  <h3>Graphic and Motion design work here</h3>
-
+<div class="module graphic-design">
+  <h3>Versatile Graphic & Motion Design: Blending Design Expertise with Front End Development</h3>
+  <p>With over six years of professional experience, I have honed my skills in all aspects of graphic design, motion design, animation, and 3D modeling. While my primary focus has shifted to front end development, I continue to work with design to ensure my skills remain up-to-date and relevant. Throughout my full-time and freelance work, I have collaborated with a diverse range of companies and individuals, creating visually stunning and engaging digital experiences.</p>
+  <p>My extensive background in graphic and motion design has allowed me to seamlessly integrate my design expertise into my front end development projects. I invite you to explore my portfolio, which showcases the unique visual stories I have crafted, combining skill, creativity, and a deep understanding of client needs.</p>
+    
+  <h4>Key Skills:</h4>
+  <ul>
+    <li>Graphic Design: Adobe Photoshop, Illustrator, and InDesign</li>
+    <li>UI/UX Design: Figma, Sketch</li>
+    <li>Motion Graphics: Adobe After Effects, Adobe Animate</li>
+    <li>3D Modeling: Autodesk Maya, Cinema 4D, Blender 3D</li>
+  </ul>
+    
 </div>
