Markers off, nav update, current header

--- a/content/_index.html
+++ b/content/_index.html
@@ -148,7 +148,11 @@ title: Home
 </div>
 
 <div class="module current">
-  <h2 class="current__title">Recent Work:<br>Creative Front End Development</h2>
+  <div class="current__header">
+    <h2 class="current__title">Recent Work:</h2>
+    <span class="current__span">Creative Front End Development</span>
+  </div>
+  
 
   <div class="current__container">
     <div class="current__image-outer">
