Card JSON, shortcode setup

--- a/content/graphic-motion-design.html
+++ b/content/graphic-motion-design.html
@@ -14,5 +14,10 @@ hide_footer: false
     <li>Motion Graphics: Adobe After Effects, Adobe Animate</li>
     <li>3D Modeling: Autodesk Maya, Cinema 4D, Blender 3D</li>
   </ul>
-    
+  
+  <div class="projects">
+    {{< project-card >}}
+  </div>
+
+
 </div>
