Resized images, mobile/desktop sizes for optimization

--- a/content/_index.html
+++ b/content/_index.html
@@ -6,7 +6,7 @@ title: Home
 
   <div class="intro__container">
 
-    <img class="intro__image" src="./images/garrett-siegel.webp" alt="Garrett Siegel">
+    <img class="intro__image" src="../images/optimized/garrett-siegel-front-end-developer-and-graphic-designer.jpg" alt="Garrett Siegel | Front End Developer and Graphic Designer">
     <p class="intro__overline">
       Hi there! I'm
     </p>
@@ -156,7 +156,9 @@ title: Home
 
   <div class="current__container">
     <div class="current__image-outer">
-      <img class="current__image" src="../images/design-systems.webp" alt="">
+      <img class="current__image-desktop" src="../images/optimized/design-systems_desktop.jpg" alt="">
+      <img class="current__image-mobile" src="../images/optimized/design-systems_mobile.jpg" alt="">
+
     </div>
 
     <h3 class="current__subhead">Design Systems:<br>Embracing Atomic Design Theory for Customized Web Solutions</h3>
@@ -164,14 +166,18 @@ title: Home
   </div>
 
   <div class="current__container">
-    <img class="current__image" src="../images/mccluskey.webp" alt="">
+    <img class="current__image-desktop" src="../images/optimized/dynamic-web-and-scroll-trigger_desktop.jpg" alt="">
+    <img class="current__image-mobile" src="../images/optimized/dynamic-web-and-scroll-trigger_mobile.jpg" alt="">
+
 
     <h3 class="current__subhead">Innovative Dynamic Web Page Design with GSAP and ScrollTrigger Integration</h3>
     <p class="current__desc">I recently completed an innovative dynamic web page design project that showcases my expertise in creating engaging and interactive user experiences. Working closely with the ESPN Visual Storytelling design team, I took their vision and transformed it into a responsive and visually appealing editorial piece using the powerful GSAP animation library and ScrollTrigger plugin. Collaborating with my development team, I created a custom experience that incorporates custom video and audio players, as well as carousel elements, ensuring a smooth and captivating user experience across various devices and platforms. This project demonstrates my proficiency in front-end development and my ability to leverage advanced animation techniques to bring design visions to life. To explore this dynamic web page design further, please <span class="link"><a href="https://www.espn.com/espn/feature/story?id=34212123&_slug_=investigative-mccluskey" target="_blank">click here</a></span>.</p>
   </div>
 
   <div class="current__container">
-    <img class="current__image" src="../images/data-viz.webp" alt="">
+    <img class="current__image-desktop" src="../images/optimized/data-visualization_desktop.jpg" alt="">
+    <img class="current__image-mobile" src="../images/optimized/data-visualization_mobile.jpg" alt="">
+
     <h3 class="current__subhead">Data Visualization:<br>Dynamic and Real-Time Web Experiences</h3>
     <p class="current__desc">I excel at utilizing both static and dynamic data to manipulate DOM events and enable real-time updates on the web. In a recent project, I effectively implemented seamless content updates as data changed in real time, creating a more engaging and interactive user experience. To explore this data visualization project further, please <span class="link"><a href="https://www.espn.com/espn/feature/story/_/id/35297537/nfl-playoff-picture-live-updated-chances-clinch-projected-bracket-scenarios-win-probabilities-interesting-races-watch" target="_blank">click here</a></span>.</p>
   </div>
