--- a/content/graphic-motion-design.html
+++ b/content/graphic-motion-design.html
@@ -7,7 +7,7 @@ hide_footer: false
   <p>With over six years of professional experience, I have honed my skills in all aspects of graphic design, motion design, animation, and 3D modeling. While my primary focus has shifted to front end development, I continue to work with design to ensure my skills remain up-to-date and relevant. Throughout my full-time and freelance work, I have collaborated with a diverse range of companies and individuals, creating visually stunning and engaging digital experiences.</p>
   <p>My extensive background in graphic and motion design has allowed me to seamlessly integrate my design expertise into my front end development projects. I invite you to explore my portfolio, which showcases the unique visual stories I have crafted, combining skill, creativity, and a deep understanding of client needs.</p>
     
-  <h4>Key Skills:</h4>
+  <h4 class="skills-header">Key Skills:</h4>
   <ul>
     <li>Graphic Design: Adobe Photoshop, Illustrator, and InDesign</li>
     <li>UI/UX Design: Figma, Sketch</li>
