Add: color palette, shortcodes; Refactor: data files; Style: updates

--- a/content/graphic.html
+++ b/content/graphic.html
@@ -1,6 +1,5 @@
 ---
-title: graphic-motion-design
-hide_footer: false
+title: graphic
 ---
 <div class="module graphic-design">
   <h3>Versatile Graphic & Motion Design: Blending Design Expertise with Front End Development</h3>
