--- a/content/graphic.html
+++ b/content/graphic.html
@@ -11,7 +11,7 @@ title: graphic
     <li>Graphic Design: Adobe Photoshop, Illustrator, and InDesign</li>
     <li>UI/UX Design: Figma, Sketch</li>
     <li>Motion Graphics: Adobe After Effects, Adobe Animate</li>
-    <li>3D Modeling: Autodesk Maya, Cinema 4D, Blender 3D</li>
+    <li>3D Modeling: Autodesk Maya, Blender 3D, Cinema 4D</li>
   </ul>
   
   <div class="projects">
