--- a/content/graphic.html
+++ b/content/graphic.html
@@ -6,6 +6,12 @@ title: graphic
   <p>With over six years of professional experience, I have honed my skills in all aspects of graphic design, motion design, animation, and 3D modeling. While my primary focus has shifted to front end development, I continue to work with design to ensure my skills remain up-to-date and relevant. Throughout my full-time and freelance work, I have collaborated with a diverse range of companies and individuals, creating visually stunning and engaging digital experiences.</p>
   <p>My extensive background in graphic and motion design has allowed me to seamlessly integrate my design expertise into my front end development projects. I invite you to explore my portfolio, which showcases the unique visual stories I have crafted, combining skill, creativity, and a deep understanding of client needs.</p>
     
+  <!-- <div class="vitacost">
+    <h4>Vitacost Design Work</h4>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sint consectetur quod dignissimos expedita aperiam harum animi doloremque, modi temporibus! Facilis accusantium in modi facere commodi aliquam rem? Adipisci, at unde?</p>
+    <a href="">See More</a>
+  </div> -->
+
   <h4 class="skills-header">Key Skills:</h4>
   <ul>
     <li>Graphic Design: Adobe Photoshop, Illustrator, and InDesign</li>
@@ -14,7 +20,7 @@ title: graphic
     <li>3D Modeling: Autodesk Maya, Blender 3D, Cinema 4D</li>
   </ul>
   
-  <div class="projects">
+  <div class="items">
     {{< project-card >}}
   </div>
 
